--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ html {
   width: 100%;
   height: 500px;
   background-color: #e7e0d9;
-  background-image: url(/img/top-banner.jpg);
+  background-image: url(./img/top-banner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -166,7 +166,7 @@ html {
   color: #56565a;
 }
 .beauty .standarts__bg {
-  background-image: url(/img/bg-standart.jpg);
+  background-image: url(./img/bg-standart.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -223,7 +223,7 @@ html {
 }
 
 .beauty .indegrients-title {
-  font-family: "GTWalsheimPro";
+  font-family: "GTWalsheimPro", "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
@@ -242,7 +242,7 @@ html {
   margin-bottom: 15px;
 }
 .beauty .indegrients__more-title-text {
-  font-family: "GTWalsheimPro";
+  font-family: "GTWalsheimPro", "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -277,7 +277,7 @@ html {
 }
 .beauty .indegrients__caption {
   position: relative;
-  font-family: "GTWalsheimPro";
+  font-family: "GTWalsheimPro", "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -351,7 +351,7 @@ html {
 }
 
 .beauty .formuls-desc {
-  font-family: "GTWalsheimPro";
+  font-family: "GTWalsheimPro", "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -384,7 +384,7 @@ html {
 }
 
 .beauty .formuls__card-caption {
-  font-family: "GTWalsheimPro";
+  font-family: "GTWalsheimPro", "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -394,7 +394,7 @@ html {
 }
 
 .beauty .formuls__card-desc {
-  font-family: "Source Sans Pro";
+  font-family: "GTWalsheimPro", "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -419,7 +419,7 @@ html {
 */
 .beauty .banner-center-wrap {
   margin-top: 80px;
-  background-image: url(/img/img-aloe.jpg);
+  background-image: url(./img/img-aloe.jpg);
   height: 520px;
   background-size: cover;
 }
@@ -675,7 +675,7 @@ html {
   .beauty .banner {
     grid-template-columns: 1fr 1.2fr;
     background-position: 50%;
-    background-image: url(/img/top-banner_tab.jpg);
+    background-image: url(./img/top-banner_tab.jpg);
     width: 100vw;
     margin-left: -39px;
     height: 445px;
