--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 body,
 html {
   overflow-x: hidden;
@@ -240,6 +233,7 @@ html {
   flex-wrap: nowrap;
   justify-content: center;
   margin-bottom: 15px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .beauty .indegrients__more-title-text {
   font-family: "GTWalsheimPro", "Source Sans Pro", sans-serif;
@@ -288,6 +282,7 @@ html {
   padding-bottom: 11px;
   z-index: 2;
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .beauty .indegrients__caption:last-child {
   margin-right: 0;
@@ -464,6 +459,7 @@ html {
   font-size: 20px;
   line-height: 23px;
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .beauty .what-is__btn img {
   transition: 0.3s;
@@ -507,6 +503,7 @@ html {
   border: 0;
   cursor: pointer;
   margin-bottom: 15px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .beauty .spy__btn img {
   transition: 0.3s;
